--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,24 +1,69 @@
 .menu-text{
 	color:white;
 	display:flex;
+	flex-direction:column;
 	padding:.2rem 1.5rem;
 	list-style:none;
-	height:50px;
+	/*height:50px;*/
 	border-radius:5px;
-	margin:1rem;
+	/*margin:1rem;*/
+	-webkit-user-select:none; 
+   -webkit-touch-callout:none; 
+      -moz-user-select:none; 
+     -ms-user-select:none; 
+        user-select:none;    
+	
 }
 
-.menu-text a{
+.menu-text p{
 	text-decoration:none;
 	color:white;
 	font-size:1.4rem;
 	height:100%;
-	width:80%;
+	width:95%;	
 	display:flex;
 	align-items:center;
+	display:block;
+cursor:pointer;
 
 }
 
 .menu-text:hover{
-	background:blue;
+	/*background:blue;*/
+	/*opacity:0.6;*/
 }
+
+
+.drop{
+background:#eee;
+display:none;
+/*margin:1rem 0;*/
+border-radius:.2rem;
+}
+
+.drop.active{
+	background:#eee;
+	display:block;
+}
+
+.angle{
+
+}
+
+.down{
+	transform: rotate(90deg);
+	
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
